# redog

./: .gitignore  Cargo.toml  config.yaml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  route.rs
crates/api/src/websocket/: handler.rs  server.rs
crates/crud/: Cargo.toml
crates/crud/src/: lib.rs  user.rs
crates/crud/src/auth/: user.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/migration/: .env
crates/model/: Cargo.toml
crates/model/src/: user.rs
